af-mb-team/af-mb-hospital-equipment-webapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-equipment-webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: hospital-equipment-webapi-label
  template:
    metadata:
      labels:
        pod: hospital-equipment-webapi-label
    spec:
      containers:
        - name: hospital-equipment-webapi-container
          image: martinabillich/webapi-hospital-equipment:1.0.0-105
          imagePullPolicy: Always
          ports:
            - name: webapi-port
              containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.3"
