af-mb-team/af-mb-hospital-equipment-webapi/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hospital-equipment-webapi
spec:
  type: ClusterIP
  selector:
    pod: hospital-equipment-webapi-label
  ports:
    - name: webapi-s-port
      protocol: TCP
      port: 80
      targetPort: 8080
